tests/cli/snapshots/cli__baseline__baseline_merges_existing_disable_comment_jsx.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
    - "--rules"
    - untranslated
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Inserted 1 comment(s) in 1 file(s) (processed 1 issue(s)):
  - untranslated: 1 comment(s), 1 key(s) (from 1 usage(s))

----- stderr -----
