tests/cli/snapshots/cli__baseline__baseline_mixed_contexts.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.tsx:4:19
     |
   4 |             <span>JSX Text</span>
     |                   ^
  +             {/* glot-disable-next-line */}

  --> ./src/app.tsx:5:32
     |
   5 |             <input placeholder="JS Attr" />
     |                                ^
  +             // glot-disable-next-line

Inserted 2 comment(s) in 1 file(s).

----- stderr -----
