tests/cli/snapshots/cli__baseline__baseline_mixed_rules_same_line.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Skipped (line has translation call):
  --> ./src/app.tsx:4:33
     |
   4 |     return <div>{t("greeting")} suffix</div>;
     |                                 ^

  --> ./src/app.tsx:4:18
     |
   4 |     return <div>{t("greeting")} suffix</div>;
     |                  ^
  +     {/* glot-disable-next-line untranslated */}

Inserted 1 comment(s) in 1 file(s):
  - untranslated: 1
Skipped 1 line(s) with mixed translation/hardcoded text.

----- stderr -----
