tests/cli/snapshots/cli__baseline__baseline_mixed_same_line_and_multiline.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.tsx:4:19
     |
   4 |             <span>JSX Text</span>
     |                   ^
  +             {/* glot-disable-next-line */}

  --> ./src/app.tsx:6:29
     |
   6 |                 placeholder="Multi-line attr"
     |                             ^
  +                 // glot-disable-next-line

Inserted 2 comment(s) in 1 file(s).

----- stderr -----
