tests/cli/snapshots/cli__baseline__baseline_multiline_attr.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.tsx:5:29
     |
   5 |                 placeholder="Enter name"
     |                             ^
  +                 // glot-disable-next-line hardcoded

Inserted 1 comment(s) in 1 file(s):
  - hardcoded: 1 comment(s)

----- stderr -----
