tests/cli/snapshots/cli__baseline__baseline_nested_element_in_expression.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.tsx:7:25
     |
   7 |                         Nested text
     |                         ^
  +                         {/* glot-disable-next-line hardcoded */}

Inserted 1 comment(s) in 1 file(s).

----- stderr -----
