tests/cli/snapshots/cli__baseline__baseline_nested_element_same_line_attr.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.tsx:4:29
     |
   4 |             <nav aria-label="Tabs">content</nav>
     |                             ^
  +             {/* glot-disable-next-line hardcoded */}

Inserted 1 comment(s) in 1 file(s).

----- stderr -----
