tests/cli/snapshots/cli__baseline__baseline_no_hardcoded_text.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✓ Checked 1 source file, 1 locale file - no issues found

----- stderr -----
