tests/cli/snapshots/cli__baseline__baseline_no_untranslated_when_properly_translated.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--rules"
    - untranslated
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✓ Checked 1 source file, 2 locale files - no issues found

----- stderr -----
