tests/cli/snapshots/cli__baseline__baseline_preserves_indentation.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.tsx:4:19
     |
   4 |             <span>Deeply indented</span>
     |                   ^
  +             {/* glot-disable-next-line hardcoded */}

Inserted 1 comment(s) in 1 file(s):
  - hardcoded: 1

----- stderr -----
